# stock-management

./: README.md
api/: .env.example  Cargo.toml  Dockerfile  diesel.toml  docker-compose.yml
api/migrations/2025-12-08-131658-0000_create_users/: up.sql
api/migrations/2026-01-23-204946-0000_create_workspaces/: down.sql  up.sql
api/migrations/2026-01-24-004525-0000_create_products/: down.sql  up.sql
api/migrations/2026-02-02-133831-0000_create_places/: down.sql  up.sql
api/migrations/2026-02-02-205704-0000_create_suppliers/: down.sql  up.sql
api/migrations/2026-02-03-003411-0000_stock_movements/: down.sql  up.sql
api/migrations/2026-04-30-132938-0000_add_multitenant_and_stock_indexes/: down.sql  up.sql
api/src/: app.rs  errors.rs  lib.rs  main.rs
api/src/app/: mod.rs  state.rs
api/src/contracts/: event_bus.rs
api/src/extractors/: authenticated_user.rs  claims.rs  mod.rs  validated_json.rs
api/src/handlers/: mod.rs  places.rs  products.rs  stock.rs  stock_movements.rs  suppliers.rs
api/src/infrastructure/: mod.rs  models.rs  schema.rs  user_repository.rs
api/src/models/: event.rs  ids.rs  mod.rs  place.rs  product.rs  stock_movement.rs  supplier.rs  user.rs  workspace.rs
api/src/routes/: auth.rs  mod.rs  places.rs  products.rs  stock_movements.rs  suppliers.rs
api/src/services/: auth_service.rs  mod.rs  places_service.rs  products_service.rs  stock_movements_service.rs  stock_service.rs  suppliers_service.rs
api/tests/: mod.rs
api/tests/common/: db.rs  helpers.rs  messaging.rs  mod.rs
api/tests/repositories/: mod.rs  places_repository_test.rs  products_repository_test.rs  stock_movements_repository_test.rs  (+4 more)
(+63 files in other folders)
