[package]
name = "stock-management-api"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.7"
axum-extra = { version = "0.12.5", features = ["typed-header"]}
chrono = { version = "0.4.43", features = ["serde"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.3.4", features = ["postgres", "chrono"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
password-hash = "0.5.0"
rand =  "0.8.5"
rdkafka = "0.39.0"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = ["full"] }
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
diesel_migrations = "2.3.1"
fake = { version = "4.4.0", features = ["derive"] }
